--- a/index.html
+++ b/index.html
@@ -25,14 +25,10 @@
     </table>
 
     <hr>
-    <h3>Working Over</h3>
-    <ul>C
-      <li>Gate Syllbus</li>
-      <li>RBR vids</li>
-      <li>Ec Acadamics</li>
-      <li><strong><a href="https://www.udemy.com/the-complete-web-development-bootcamp/">Web development</strong>Angela yu</a></li>
-      <li><a href="https://www.coursera.org/learn/machine-learning">Machine learning andrew ng</a></li>
-      <li><a href="https://www.udemy.com/java-the-complete-java-developer-course/">Java Tim Balchuk</a></li>
+    <h3>Currently working on</h3>
+    <ul>
+      <li>Web development</li>
+      <li>Machine Learning</li>
 
     </ul>
     <hr>
