Github Account Link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
           <p><em>The EC Guy who loves Computer Programing</em></p>
           <a href="res/cont.html">here's my contact</a>
           <a href="form.html">Take an Appointment</a>
+          <br>
+          <a href="https://github.com/yashbaddi">Github Account</a>
 
         <p>hey this is Yash and i am a foodie </p>
       </td>
